fixed dark mode

--- a/react-electron/src/js/components/jobArchiving/JobArchiving.scss
+++ b/react-electron/src/js/components/jobArchiving/JobArchiving.scss
@@ -6,6 +6,9 @@
     }
 }
 
-.nav-link, .nav-link:hover{
-    color:white;
+.nav-link, .nav-link:hover, .nav-link:active{
+    
+    @include themify ($themes) {
+        color: themed('main-color')
+    }
 }
